force-app/main/default/objects/AssetProductRenewal__mdt/AssetProductRenewal__mdt.object-meta.xml
<CustomObject>
    <label>Asset Product Renewal</label>
    <pluralLabel>AssetProductRenewals</pluralLabel>
</CustomObject>