force-app/main/default/objects/AssetProductRenewal__mdt/fields/ProductEAN__c.field-meta.xml
<CustomField>
    <fullName>ProductEAN__c</fullName>
    <label>Product EAN</label>
    <length>155</length>
    <type>Text</type>
</CustomField>